# Tovek

./: .gitignore  BUG_EXAMPLES.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  Cargo.toml  FINDINGS.md  Progress.md  README.md  decompile.client.luau  run-server.ps1
_harness/: .gitignore  check.sh  diff.sh  run1.sh  triage.py  triage2.py
_harness/_bugs/: C1.dec.luau  C1.luau  C10.dec.luau  C10.luau  C11.dec.luau  C11.luau  C12.dec.luau  C12.luau  C2.dec.luau  C2.luau  C2b.dec.luau  C2b.luau  C3.dec.luau  C3.luau  C4.dec.luau  C4.luau  C5.dec.luau  C5.luau  C6.dec.luau  C6.luau  C7.dec.luau  C7.luau  C8.dec.luau  C8.luau  C9.dec.luau  C9.luau
ast/: Cargo.toml
ast/src/: assign.rs  binary.rs  call.rs  canonicalize_branches.rs  cleanup_final.rs  cleanup_returns.rs  closure.rs  conditional_expressions.rs  copy_cleanup.rs  deinline.rs  eliminate_nil.rs  expr_deinline.rs  expression_budget.rs  factor_common_tails.rs  flatten_guards.rs  formatter.rs  if.rs  if_expression.rs  index.rs  inline_temps.rs  lib.rs  literal.rs  local.rs  local_declarations.rs  materialize_call_receivers.rs  materialize_value_captures.rs  name_locals.rs  normalize_conditions.rs  rebalance_expressions.rs  rebuild_table_literals.rs  recover_dropped_connection.rs  recover_guard_continue.rs  recover_methods.rs  rehoist_constants.rs  repeat.rs  return.rs  set_list.rs  side_effects.rs  simplify_gotos.rs  (+4 more)
cfg/: Cargo.toml
docs/: index.html
lua51-deserializer/: Cargo.toml
lua51-lifter/: Cargo.toml
luau-lifter/: Cargo.toml
luau-worker/: Cargo.toml
restructure/: Cargo.toml
web-server/: Cargo.toml
(+25 files in other folders)
